--- a/Keepr.client/index.html
+++ b/Keepr.client/index.html
@@ -5,9 +5,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <link rel="icon" href="https://bcw.blob.core.windows.net/public/img/9977764104160066" />
+  <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/016/316/977/original/gold-text-effect-letter-k-3d-render-png.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
   <title>
-    Keepr.client
+    Keepr
   </title>
 </head>
 
