--- a/Keepr/wwwroot/index.html
+++ b/Keepr/wwwroot/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Keepr</title>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/016/316/977/original/gold-text-effect-letter-k-3d-render-png.png" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Marko+One&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oxygen&display=swap" rel="stylesheet">
+  <title>
+    Keepr
+  </title>
+  <script type="module" crossorigin src="/assets/index.f3562c27.js"></script>
+  <link rel="stylesheet" href="/assets/index.5c3aa8b1.css">
 </head>
+
 <body>
-    <h1>Keepr Initialized</h1>
-    <p>Check out the api swagger docs <a href="/swagger">here</a> </p>
+  <noscript>
+    <strong>We're sorry but Keepr.client doesn't work properly without JavaScript
+      enabled. Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+  
 </body>
+
 </html>
